--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ nav {
     background-color: #fff;
     z-index: 100;
 }
-
+ 
 nav ul {
     display: inline;
 }
@@ -62,27 +62,24 @@ main {
     background-color: #fff;
 }
 
+main .movie-type {
+    font-size: 40px;
+    font-weight: 400;
+    margin: 5px;
+}
+
 header {
     width: 100%;  
     height: 200px;
     flex-direction: column;
     position: relative;
     z-index: 1;
-    color: rgb(148, 148, 148);
-}
-
-header img {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    left: 0;
-    top: 0;
-    z-index: -10;
+    background-color: rgb(236, 236, 236);
 }
 
 header .title {
     font-weight: lighter;
-    color: #fff;
+    color: #000;
     opacity: 80%;
     font-size: 40px;
     letter-spacing: 10px;
@@ -96,6 +93,7 @@ header .title {
 
 .today {
     width: 100%;
+    height: auto;
     background-color: #ddd;
     padding: 0 100px;
     border: 1px solid #aaa;
@@ -171,6 +169,11 @@ header .title {
     margin: 15px;
 }
 
+.additional-info p{
+    font-size: 20px;
+    margin: 5px 0;
+}
+
 .film-title {
     font-size: 45px;
     margin-bottom: 10px;
@@ -179,12 +182,6 @@ header .title {
 .film-description {
     font-size: 24px;
     padding: 10px 0;
-}
-
-.film-type, .film-genre, .film-year, .film-start,
-.film-duration, .film-price, .film-room {
-    font-size: 20px;
-    margin: 5px 0;
 }
 
 .film-type {
@@ -196,4 +193,31 @@ header .title {
     width: 150px;
     height: 40px;
     font-size: 18px;
+}
+
+#showmore-triger img {
+    visibility: hidden;
+}
+
+#showmore-triger img.active {
+    visibility: visible;
+}
+
+.other {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.filter-form {
+    width: 90%;
+    min-height: 100px;
+    border: 1px solid black;
+    padding: 10px;
+}
+
+.filter, .order {
+    display: flex;
+    font-size: 20px;
 }
