--- a/css/style.css
+++ b/css/style.css
@@ -213,11 +213,78 @@ header .title {
 .filter-form {
     width: 90%;
     min-height: 100px;
-    border: 1px solid black;
+    border: 1px solid #aaa;
     padding: 10px;
+    background-color: #ddd;
+}
+
+.filter-form label{
+    margin-left: 10px;
+    margin-right: 5px;
+}
+
+.order {
+    margin-top: 10px;
+}
+
+.filter-form button {
+    font-size: 16px;
+    width: 100px;
+    height: 25px;
+    margin-left: 10px;
+    margin-top: 10px;
 }
 
 .filter, .order {
     display: flex;
     font-size: 20px;
+}
+
+.add-film-form {
+    width: 90%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin: 30px;
+}
+
+.add-film-form h2 {
+    margin: 10px 0;
+    font-weight: 400;
+}
+
+.add-film-form label {
+    width: 150px;
+    font-size: 20px;
+    margin-right: 10px;
+}
+
+.add-film-form input,
+.add-film-form select {
+    height: 25px;
+    width: 230px;
+    font-size: 16px;
+    padding: 0px 5px;
+}
+
+.add-film-form input[type=file] {
+    padding: 0;
+    height: 25px;
+    font-size: 13px;
+}
+
+.add-film-form button {
+    width: 100px;
+    height: 25px;
+    font-size: 16px;
+    margin-top: 10px;
+}
+
+.option {
+    width: 100%;
+    margin: 5px 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
